# claude-ads

./: .gitignore  CODEX.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ads/: SKILL.md
ads/references/: additional-platforms.md  amazon-audit.md  apple-audit.md  brand-dna-template.md  copy-frameworks.md  creative-source-registry.md  gaql-notes.md  google-creative-specs.md  image-providers.md  linkedin-creative-specs.md  meta-creative-specs.md  microsoft-creative-specs.md  pinterest-audit.md  reddit-audit.md  scoring-system.md  snapchat-audit.md  status-contract.md  thinking-framework.md  tiktok-creative-specs.md  voice-to-style.md  x-audit.md  youtube-audit.md  youtube-creative-specs.md
agents/: copy-writer.md  creative-strategist.md  format-adapter.md  visual-designer.md
claude_ads_core/: __init__.py  cli.py  contracts.py  control_registry.py  models.py  orchestration.py  product_status.py  workflow_contracts.py  workflow_models.py
claude_ads_core/adapters/: __init__.py  base.py  csv_export.py  mappings_v1.py  native_export.py
control-plane/: PRODUCT_BOUNDARIES.md  README.md  RELEASE_REQUIREMENTS.md
control-plane/manifests/: capability-manifest.json  claim-ledger.json  control-registry.json  data-lifecycle-policy.json  (+6 more)
evals/: model-eval-contract.json  model_eval_gate.py  model_evidence_auth.py
scripts/: analyze_landing.py  build_control_registry.py  capture_screenshot.py  generate_image.py  release.py  review_evidence.py  url_utils.py
(+111 files in other folders)
