[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-ads-core"
version = "2.0.0"
description = "Deterministic contracts, validation, and scoring for Claude Ads"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
claude-ads-core = "claude_ads_core.cli:main"

[tool.setuptools.packages.find]
include = ["claude_ads_core*"]

[tool.setuptools.package-data]
claude_ads_core = ["schemas/v1/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
